--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -161,10 +161,18 @@
 
                                                         <div class="row">
                                                             <div class="col-md-6">
-                                                                <label for="ddlSupplierName" class="col-form-label">Supplier Name</label>
+                                                                <label for="ddlSupplierName" class="control-label">Supplier Name</label>
                                                                 @Html.DropDownList("ddlSupplierName", (IEnumerable<SelectListItem>)ViewBag.ddlSupplierName, "--Select Supplier--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                                                 <span class="error hide req-SupplierName font-weight-bold">Supplier Name is required!</span>
                                                             </div>
+                                                            <!--<div class="col-md-6">-->
+                                                                @*<div class="form-group">*@
+                                                                <!--<label for="ddlInvoiceDate">Invoice Date</label>
+                                                                <input type="date" class="form-control-sm" id="ddlInvoiceDate" placeholder="Asign Date">
+                                                                <span class="error hide req-ddlInvoiceDate font-weight-bold">date requered!</span>-->
+                                                                @*</div>*@
+                                                            <!--</div>-->
+
                                                             <div class="col-md-6">
                                                                 <div class="form-group">
                                                                     <label for="ddlInvoiceDate">Invoice Date</label>
@@ -210,7 +218,7 @@
                                                                 <span class="error hide req-ddlRawMaterial">RawMaterial Is Required</span>
                                                             </div>
 
-                                                            <div class="col-md-2">
+                                                            <div class="col-md-1">
                                                                 <label for="ddlUnitName">Unit</label>
                                                                 <input type="text" id="ddlUnitName" name="ddlUnitName" class="form-control form-control-sm" readonly />
                                                             </div>
@@ -233,6 +241,22 @@
                                                                 <label>SubTotal</label>
                                                                 <input type="number" id="ddlttprice" name="ddlttprice" class="form-control form-control-sm" readonly />
                                                             </div>
+                                                            @*<div class="col-md-2">
+                                                                <label for="ddlexpdate">Expire Date</label>
+                                                                <input type="date" class="form-control-sm" id="ddlexpdate" placeholder="Expire Date">
+                                                                <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
+                                                            </div>*@
+
+                                                            <div class="col-md-2">
+                                                                <div class="form-group">
+                                                                    <label for="ddlexpdate">Expire Date</label>
+                                                                    <input type="date" class="form-control" id="ddlexpdate" placeholder="Expire Date">
+                                                                    <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
+                                                                </div>
+                                                            </div>
+
+
+
                                                             <div class="col-md-1">
                                                                 <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
                                                                 <div class="clearfix">
@@ -241,7 +265,7 @@
                                                             </div>
                                                         </div>
 
-                                                    </div>
+                                                        </div>
 
 
                                                 </div>
@@ -276,6 +300,7 @@
                                             <th class="hide DepotlId"></th>
                                             <th class="hide RMId"></th>
                                             <th class="hide unitId"></th>
+                                            <th class="hide ddlexpdate"></th>
 
                                         </tr>
                                     </thead>
@@ -390,6 +415,8 @@
         var ddlInvoiceNo = $("#ddlInvoiceNo");
         var ddlChallanNo = $("#ddlChallanNo");
         var ddlInvoiceDate = $("#ddlInvoiceDate");
+
+        var ddlexpdate = $("#ddlexpdate");
 
 
         var ddlDepotName = $("#ddlDepotName");
@@ -579,7 +606,9 @@
                 var td8 = "<td class='text-center hide'>" + ddlRawMaterial.val() + "</td>";
                 var td9 = "<td class='text-center hide'>" + ddlUnitID.val() + "</td>";
 
-                var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + "</tr>";
+                var td10 = "<td class='text-center hide'>" + ddlexpdate.val() + "</td>";
+
+                var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + "</tr>";
 
 
                 //totalprice
@@ -634,6 +663,8 @@
                                 UnitPrice: tds.eq(3).html(),
                                 Quantity: tds.eq(4).html(),
                                 SubTotal: tds.eq(5).html(),
+
+                                ExpireDate: tds.eq(9).html(),
 
                             });
                         })
