--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -62,7 +62,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-12 text-sm text-sm" id="dataContainer" style="overflow-y:scroll">
-                                            @*@{Html.RenderAction("GetProductFinishGoodList", new { @flag = "Initial" });}*@
+                                            @{Html.RenderAction("GetProductFinishGoodList", new { @flag = "Initial" });}
                                         </div>
                                     </div>
                                 </div>
