--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -22,7 +22,7 @@
                 <td>@sl</td>
                 <td class="hide">@item.MeasurementId</td>
                 <td>@item.MeasurementName</td>
-                <td>@item.MasterCarton X @item.InnerBox X @item.PackSize </td>
+                <td>@item.PackageName </td>
                 <td class="hide">@item.MasterCarton</td>
                 <td class="hide">@item.InnerBox</td>
                 <td class="hide">@item.PackSize</td>
