--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -138,12 +138,12 @@
                             </div>
                             <div class="col-md-4">
                                 <label for="ddlMeasurementName" class="col-form-label">
-                                    Measurement Name
+                                    Measurement Desc
                                 </label>
                                 @Html.DropDownList("ddlMeasurementName", (IEnumerable<SelectListItem>)ViewBag.ddlMeasurementName, "--Select MeasurementName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                 <span class="error hide req-MeasurementName font-weight-bold">Measurement Name is required!</span>
                             </div>
-                            <div class="col-md-3">
+                            <div class="hide">
                                 <label for="ddlRawMaterial" class="col-form-label">Measurement Size</label>
                                 @*@Html.DropDownList("ddlMeasurementSize", (IEnumerable<SelectListItem>)ViewBag.ddlMeasurementSize, "--Select Measurement Size--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })*@
                                 <input type="text" id="ddlMeasurementSize" class="form-control form-control-sm" readonly />
