--- a/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
@@ -16,7 +16,7 @@
                 <th>Return Total </th>
                 <th>Current Stock </th>
 
-                <th>Action</th>
+                @*<th>Action</th>*@
 
             </tr>
 
@@ -40,7 +40,7 @@
                         <td>@item.ReturnTotal</td>
                         <td>@item.CurrentStock</td>
 
-                        <td><a href="#" class="btn btn-secondary btn-sm data-item-detail" data-item-detail="@item.FinishGoodProductionBatch"><i class="fas fa-eye"></i>View</a></td>
+                        @*<td><a href="#" class="btn btn-secondary btn-sm data-item-detail" data-item-detail="@item.FinishGoodProductionBatch"><i class="fas fa-eye"></i>View</a></td>*@
 
                     </tr>
 
