--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -165,13 +165,7 @@
                                                                 @Html.DropDownList("ddlSupplierName", (IEnumerable<SelectListItem>)ViewBag.ddlSupplierName, "--Select Supplier--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                                                 <span class="error hide req-SupplierName font-weight-bold">Supplier Name is required!</span>
                                                             </div>
-                                                            <!--<div class="col-md-6">-->
-                                                                @*<div class="form-group">*@
-                                                                <!--<label for="ddlInvoiceDate">Invoice Date</label>
-                                                                <input type="date" class="form-control-sm" id="ddlInvoiceDate" placeholder="Asign Date">
-                                                                <span class="error hide req-ddlInvoiceDate font-weight-bold">date requered!</span>-->
-                                                                @*</div>*@
-                                                            <!--</div>-->
+
 
                                                             <div class="col-md-6">
                                                                 <div class="form-group">
@@ -241,15 +235,11 @@
                                                                 <label>SubTotal</label>
                                                                 <input type="number" id="ddlttprice" name="ddlttprice" class="form-control form-control-sm" readonly />
                                                             </div>
-                                                            @*<div class="col-md-2">
-                                                                <label for="ddlexpdate">Expire Date</label>
-                                                                <input type="date" class="form-control-sm" id="ddlexpdate" placeholder="Expire Date">
-                                                                <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
-                                                            </div>*@
+                                
 
                                                             <div class="col-md-2">
                                                                 <div class="form-group">
-                                                                    <label for="ddlexpdate">Expire Date</label>
+                                                                    <label for="ddlexpdate">Exp Date</label>
                                                                     <input type="date" class="form-control" id="ddlexpdate" placeholder="Expire Date">
                                                                     <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
                                                                 </div>
