--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -201,12 +201,12 @@
 <div class="modal fade" id="ModalProductionFinishGoodDetails" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            @*<div class="modal-header alert-secondary">
                 <h4 id="modalHeading" class="modal-title">Raw Material Consume Details</h4>
                 <button type="button" class="close" data-dismiss="modal">
                     <span aria-hidden="true">&times;</span>
                 </button>
-            </div>
+            </div>*@
             <div class="modal-body" id="dataContainer2">
 
             </div>
