--- a/ERPWeb/Views/Shared/_AdminDashboard.cshtml
+++ b/ERPWeb/Views/Shared/_AdminDashboard.cshtml
@@ -373,9 +373,13 @@
             $('.toastrAdded').click(function () {
                 toastr.success('Added')
             });
+            //$('.toastrDefaultSuccess').click(function () {
+            //    toastr.success(execuStatus.successSave)
+            //});
             $('.toastrDefaultSuccess').click(function () {
-                toastr.success(execuStatus.successSave)
+                toastr.success("Test");
             });
+
             $('.toastrDefaultUpdateOnFlayData').click(function () {
                 toastr.success('Updated')
             });
